Upload Resume download section

--- a/index.html
+++ b/index.html
@@ -80,10 +80,16 @@
         <section id="about" class="py-20 md:py-32">
             <div class="container mx-auto px-6">
                 <h2 class="section-title">About Me</h2>
-                <div class="max-w-4xl mx-auto text-center text-gray-300 text-lg leading-relaxed">
-                    <p>
-                        I am a passionate and results-driven developer specializing in the immersive technology space. Started my technology career diving straight into early Virtual Reality experiences and walked away completely invested in the notion of immersive technology. With a strong foundation in computer science and extensive hands-on experience with industry-leading game engines like Unity and Unreal, I thrive on building innovative and engaging AR/VR applications. From engineering 3D pipelines for global brands to developing multi-user VR training platforms, my goal is always to push the boundaries of what's possible in mixed reality.
-                    </p>
+                <div class="max-w-4xl mx-auto text-center">
+                    <p class="text-gray-300 text-lg leading-relaxed">
+                        I am a passionate and results-driven developer specializing in the immersive technology space. Started my technology career diving straight into early Virtual Reality experiences and walked away completely invested in the notion of immersive technology. With a strong foundation in computer science and extensive hands-on experience with industry-leading game engines like Unity and Unreal, I thrive on building innovative and engaging AR/VR applications. From engineering 3D pipelines for global brands to developing multi-user VR training platforms, my goal is always to push the boundaries of what's possible in mixed reality.                    </p>
+                    <div class="mt-10">
+                        <!-- Make sure to place your resume PDF in an 'assets' folder and name it 'ELok_Resume_2025_Full.pdf' -->
+                        <a href="assets/ELok_Resume_2025_Full.pdf" download class="border border-cyan-400 text-cyan-400 font-bold py-3 px-8 rounded-full transition-all duration-300 hover:bg-cyan-400 hover:text-gray-900 inline-flex items-center">
+                            <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
+                            Download Resume
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
